k8s/menifestfile/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
  namespace: default # or argocd depending on your choice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: rails-app
        image: nayan2001/rails-app:latest
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
