k8s/menifestfile/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
  namespace: default # or argocd
spec:
  selector:
    app: rails-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
